[minor] Use bundled bootstrap.css

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset='utf-8' />
     <title>node.js vs RoR</title>
-    <link rel='stylesheet' href='http://twitter.github.com/bootstrap/1.3.0/bootstrap.min.css'>
+    <link rel='stylesheet' href='bootstrap.min.css'>
     <style type='text/css'>
       html, body {
         height: 100%;
