[ux minor] Make client-side query API async

--- a/public/index.html
+++ b/public/index.html
@@ -81,7 +81,7 @@
       </p>
     </div>
 
-    <script type='text/javascript' src='/api?jsonp=ko.applyBindings'></script>
+    <script async='true' type='text/javascript' src='/api?jsonp=ko.applyBindings'></script>
   </body>
 </html>
 
