--- a/public/index.html
+++ b/public/index.html
@@ -3,33 +3,8 @@
   <head>
     <meta charset='utf-8' />
     <title>node.js vs RoR</title>
-    <link rel='stylesheet' href='bootstrap.min.css'>
-    <style type='text/css'>
-      html, body {
-        height: 100%;
-      }
-      .container {
-        position: relative;
-        top: 40%;
-      }
-      h1 {
-        font-size: 52px
-      }
-      h2 {
-        font-size: 42px;
-      }
-      .span8, .span16 {
-        text-align: center;
-      }
-      .bottom {
-        position: absolute;
-        bottom: 0px;
-        right: 0px;
-        background-color: #98AFC7;
-        padding: 8px;
-        border-top-left-radius: 8px;
-      }
-    </style>
+    <link rel='stylesheet' href='bootstrap.min.css' />
+    <link rel='stylesheet' href='style.css' />
     <script type='text/javascript'>
       // Google Analytics
       var _gaq = _gaq || [];
