[refactor] Use minified jquery.tmpl

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
       })();
     </script>
     <script type='text/javascript' src='jquery.min.js'></script>
-    <script type='text/javascript' src='jquery.tmpl.js'></script>
+    <script type='text/javascript' src='jquery.tmpl.min.js'></script>
     <script type='text/javascript' src='knockout-1.2.1.js'></script>
 
     <script type='text/x-jquery-tmpl' id='compareTemplate'>
